@@ -1,5 +1,5 @@
 SUBDIRS = src doc
-EXTRA_DIST =  m4/ README.* Release_Notes inet_ntop.c
+EXTRA_DIST =  m4/ README.* Release_Notes inet_ntop.c netperf.spec*
 
 dist-hook:
 	rm -rf `find $(distdir) -name .svn`
